# collatz_conjecture

./: Cargo.toml  LICENSE.Apache-2.0.md  LICENSE.MIT.md  README.md
examples/: all_u128.rs  all_u8.rs  big_unsigned.rs  main.rs  signed.rs
src/: collatz_u128.rs  collatz_u8.rs  lib.rs  macro.rs  main.rs  prelude.rs
