[package]
name = "collatz_iter"
version = "0.1.0"
description = "Collatz Conjecture (3n+1 problem) Iterator"
authors = ["Pavel Levchenko <ikar49@pm.me>"]

# Helpful information for new users
readme = "README.md"
homepage = "https://github.com/ikar49/collatz_iter"
repository = "https://github.com/ikar49/collatz_iter"
license = "MIT OR Apache-2.0"

# Information for registry (crates.io)
publish = false

# Build information
edition = "2021"
rust-version = "1.64" # because NonZero*::checked_add function is used

[dependencies]

[features]
default = ["unsigned"]

unsigned = ["u8", "u16", "u32", "u64", "u128", "usize"]
u8 = []
u16 = []
u32 = []
u64 = []
u128 = []
usize = []

signed = ["i8", "i16", "i32", "i64", "i128", "isize"]
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []
isize = []
